--- a/resources/assets/stylesheets/sass/blocks/index.sass
+++ b/resources/assets/stylesheets/sass/blocks/index.sass
@@ -4,4 +4,8 @@
 @import "footer/footer"
 @import "simple-btn/simpe-btn"
 @import "victory/victory"
+@import "social/social"
+@import "history-last/history-last"
+@import "nav-header-mobile/nav-header-mobile"
+
 
