--- a/resources/assets/stylesheets/sass/blocks/nav-header/nav-header.sass
+++ b/resources/assets/stylesheets/sass/blocks/nav-header/nav-header.sass
@@ -1,6 +1,10 @@
 a
   color: inherit
 
+.menu
+  +media-640
+    display: none
+
 .menu-content
   display: flex
   justify-content: space-around
@@ -13,7 +17,8 @@ a
     font-size: 18px
     color: #444
 
-
+    +media-768
+      font-size: 14px
 
   &__link:active
     &::after
@@ -38,4 +43,8 @@ a
   padding-top: 10px
   width: 120px
   height: 125px
+
+  +media-768
+    width: 100px
+    height: 110px
 
