--- a/resources/assets/stylesheets/sass/blocks/simple-btn/simpe-btn.sass
+++ b/resources/assets/stylesheets/sass/blocks/simple-btn/simpe-btn.sass
@@ -20,17 +20,23 @@
     text-decoration: none
     color: #000
 
+  +media-1050
+    width: 195px
+    font-size: 15px
 
-+media-1024
-  .simple__btn
+  +media-1024
     width: 165px
     font-size: 14px
 
-+media-992
-  .simple__btn
+  +media-992
     width: 22vw
     font-size: 17px
 
-+media-860
-  .simple__btn
+  +media-860
     width: 25vw
+
+  +media-685
+    width: 35vw
+
+  +media-576
+    width:  38vw
