--- a/resources/views/pages/index.njk
+++ b/resources/views/pages/index.njk
@@ -14,7 +14,7 @@
                 <h2 class="history__title history__text_white">Добавить свою<br>историю</h2>
                 <p class="history__text history__text_white">чтобы получить возможность<br> выиграть блюдо из твоих<br>воспоминаний</p>
                 <a class="simple__btn history__send history__send_white" href="#">Написать историю</a>
-                <p class="history__text history__text_top">Как мы будем определять<br> победителся конкурса?</p>
+                <p class="history__text history__text_white history__text_top">Как мы будем определять<br> победителся конкурса?</p>
                 <a class="simple__btn history__chois history__text_white" href="#">Протокол выбора</a>
             </div>
         </div>
@@ -72,7 +72,7 @@
 					        <div class="history-one">
 						        <img class="history__logo logo-six" src="/assets/images/natasha.png" alt="Наташа">
 						        <div class="history-feed">
-							        <h5 class="logo-title">Олег Бондаренко</h5>
+							        <h5 class="logo-title">Наташа Кирова</h5>
 							        <p class="feed">Поговорим о бел пури, вкусном<br> индийском блюде из воздушного риса,<br> жареной вермишели, овощей и соусом <span class="full__fid">из острого тамаринда... Лучше всего <br>попробовать блюдо в Мумбаи.</span></p>
 							        <a href="#" class="whatch__full">Читать полностью</a>
 						        </div>
@@ -128,7 +128,7 @@
 					        <div class="history-one">
 						        <img class="history__logo logo-six" src="/assets/images/natasha.png" alt="Наташа">
 						        <div class="history-feed">
-							        <h5 class="logo-title">Олег Бондаренко</h5>
+							        <h5 class="logo-title">Наташа Кирова</h5>
 							        <p class="feed">Поговорим о бел пури, вкусном<br> индийском блюде из воздушного риса,<br> жареной вермишели, овощей и соусом <span class="full__fid">из острого тамаринда... Лучше всего <br>попробовать блюдо в Мумбаи.</span></p>
 							        <a href="" class="whatch__full">Читать полностью</a>
 						        </div>
@@ -184,7 +184,7 @@
 					        <div class="history-one">
 						        <img class="history__logo logo-six" src="/assets/images/natasha.png" alt="Наташа">
 						        <div class="history-feed">
-							        <h5 class="logo-title">Олег Бондаренко</h5>
+							        <h5 class="logo-title">Наташа Кирова</h5>
 							        <p class="feed">Поговорим о бел пури, вкусном<br> индийском блюде из воздушного риса,<br> жареной вермишели, овощей и соусом <span class="full__fid">из острого тамаринда... Лучше всего <br>попробовать блюдо в Мумбаи.</span></p>
 							        <a href="" class="whatch__full">Читать полностью</a>
 						        </div>
@@ -244,9 +244,9 @@
             <div class="social">
                 <span class="social__news">Следите за новостями:</span>
                 <div class="social-logo">
-                    <div class="social-logo__item"><a class="social-logo__link" href=""><img src="/assets/images/vk-sm.png" alt="vkontakte"></a></div>
-                    <div class="social-logo__item"><a class="social-logo__link" href=""><img src="/assets/images/facebook-sm.png" alt="facebook"></a></div>
-                    <div class="social-logo__item"><a class="social-logo__link" href=""><img src="/assets/images/instagram-sm.png" alt="instagram"></a></div>
+                    <div class="social-logo__item"><a class="social-logo__link" href=""><img class="social__img" src="/assets/images/vk-sm.png" alt="vkontakte"></a></div>
+                    <div class="social-logo__item"><a class="social-logo__link" href=""><img class="social__img" src="/assets/images/facebook-sm.png" alt="facebook"></a></div>
+                    <div class="social-logo__item"><a class="social-logo__link" href=""><img class="social__img" src="/assets/images/instagram-sm.png" alt="instagram"></a></div>
 	                <img class="small-dotted" src="/assets/images/small-dotted.png" alt="dotted-line">
                 </div>
             </div>
