--- a/resources/views/shared/_footer.njk
+++ b/resources/views/shared/_footer.njk
@@ -6,9 +6,9 @@
             <h1 class="emotions__title">Какие эмоции мы хотим вызвать у наших гостей?</h1>
             <div class="emotions-slider">
                 <div class="footer-slider slider single-item one-time">
-		          <button type="button" class="slick-prev"></button>
+		          {#<button type="button" class="slick-prev"></button>#}
                     <div class="slick-slide">
-                        <div class="logo-slid"><img src="/assets/images/slide-img.png" alt=""></div>
+                        <div class="logo-slid"><img class="logo-slid__item" src="/assets/images/slide-img.png" alt=""></div>
                         <div class="sub-title">
                             <span class="sub-title__text">Том ям с морепродуктами</span>
 	                        <ul class="sub-title-list">
@@ -21,7 +21,7 @@
                         </div>
                     </div>
                     <div class="slick-slide">
-	                    <div class="logo-slid"><img src="/assets/images/slide-img.png" alt=""></div>
+	                    <div class="logo-slid"><img class="logo-slid__item" src="/assets/images/slide-img.png" alt=""></div>
 	                    <div class="sub-title">
 		                    <span class="sub-title__text">Том ям с морепродуктами</span>
 		                    <ul class="sub-title-list">
@@ -34,7 +34,7 @@
 	                    </div>
                     </div>
 	                <div class="slick-slide">
-	                    <div class="logo-slid"><img src="/assets/images/slide-img.png" alt=""></div>
+	                    <div class="logo-slid"><img class="logo-slid__item" src="/assets/images/slide-img.png" alt=""></div>
 	                    <div class="sub-title">
 		                    <span class="sub-title__text">Том ям с морепродуктами</span>
 		                    <ul class="sub-title-list">
@@ -47,7 +47,7 @@
 	                    </div>
                     </div>
                 </div>
-                <button type="button" class="slick-next"></button>
+                {#<button type="button" class="slick-next"></button>#}
             </div>
         </div>
     </div>
