--- a/resources/views/shared/_header.njk
+++ b/resources/views/shared/_header.njk
@@ -3,6 +3,7 @@
     <img class="sheet sheet__second" src="/assets/images/sheets-second.png">
     <div class="container">
         {% include "shared/_nav-header.njk" %}
+	    {% include "shared/_nav-header-mobile.njk" %}
         <div class="remember">
             <div class="remember-right">
                 <h1 class="remember__title">Вспомни лучшее</h1>
