--- a/resources/assets/stylesheets/sass/blocks/wrapper/index.sass
+++ b/resources/assets/stylesheets/sass/blocks/wrapper/index.sass
@@ -10,8 +10,15 @@ a:hover, a:focus
   position: relative
   background: url("../../images/bg-green.png") no-repeat
   background-size: contain
+  float: left
+  text-align: center
+  width: 400px
+  padding: 30px 30px 100px
 
-  +media-1152
+  +media-1225
+    width: 350px
+
+  +media-1050
     width: 31vw
 
   +media-1024
@@ -30,6 +37,13 @@ a:hover, a:focus
   +media-768
     width: 50vw
 
+  +media-685
+    width: 64vw
+    background-size: cover
+    padding-bottom: 90px
+
+  +media-640
+    width: 68vw
 
 .create__pepper
   position: absolute
@@ -54,15 +68,11 @@ a:hover, a:focus
     bottom: 35%
     width: 80px
 
-
-.history-create
-  float: left
-  text-align: center
-  width: 400px
-  padding: 30px 30px 100px
-
-  +media-1225
-    width: 350px
+  +media-576
+    top: 8%
+    left: 45%
+    bottom: 0
+    width: 65px
 
 .history-content
   border: 5px dotted #d6d6d6
@@ -73,8 +83,9 @@ a:hover, a:focus
     padding-left: 20px
     padding-right: 20px
 
-  +media-1024
-    padding-bottom: 10px
+  +media-1050
+    padding-top: 25px
+    padding-bottom: 35px
 
   +media-992
     padding-left: 40px
@@ -101,6 +112,10 @@ a:hover, a:focus
     font-size: 36px
     padding-top: 10px
 
+  +media-1050
+    padding-top: 0px
+    margin-bottom: 0px
+
   +media-992
     font-size: 50px
 
@@ -109,6 +124,9 @@ a:hover, a:focus
 
   +media-860
     font-size: 5vw
+
+  +media-685
+    font-size: 7vw
 
 .history__text_white
   color: #fff
@@ -123,6 +141,9 @@ a:hover, a:focus
 
   +media-1225
     font-size: 15px
+
+  +media-1050
+    font-size: 13px
 
   +media-1024
     font-size: 12px
@@ -144,554 +165,5 @@ a:hover, a:focus
   padding-top: 25px
   //padding-bottom: 25px
 
-.history-last
-  position: relative
-  float: right
 
-  +media-992
-    float: none
-
-  &__titile
-    text-align: center
-    font-family: drina
-    font-size: 55px
-    color: #444
-
-.history-last > .slick-slider
-  width: 795px
-
-  +media-1152
-    width: 700px
-
-  +media-1000
-    width: 68vw
-
-  +media-992
-    width: 100%
-
-
-.bacon
-  position: absolute
-  left: 13%
-
-  +media-1152
-    left: 5%
-
-  +media-992
-    left: 20%
-
-  +media-900
-    left: 16%
-
-  +media-800
-    left: 12%
-
-
-.basilick
-  position: absolute
-  top: -3%
-  right: 10%
-
-  +media-992
-    right: 23%
-
-  +media-900
-    right: 20%
-
-  +media-800
-    right: 16%
-
-
-.history-people
-  position: relative
-  padding-top: 55px
-
-  +media-992
-    padding-top: 55px
-    display: flex
-    justify-content: space-around
-
-.history-left
-  float: left
-
-.history-left > .history-one
-  +media-1000
-    width: 32vw
-
-  +media-900
-    width: 34vw
-
-  +media-860
-    width: 340px
-
-
-.history-one
-  width: 385px
-  min-height: 125px
-  margin-bottom: 25px
-
-  +media-1152
-    width: 340px
-
-
-.history__logo
-  float: left
-
-.history-feed
-  float: left
-  padding-left: 20px
-
-  +media-1152
-    padding-left: 10px
-
-.logo-title
-  font-family: gothamPBo
-  font-size: 16px
-  color: #444
-  padding-bottom: 10px
-
-.feed
-  font-family: gothamPL
-  font-size: 15px
-  line-height: 22px
-
-  +media-1152
-    font-size: 13px
-    line-height: 18px
-  
-.whatch__full
-  display: block
-  font-family: gothamPBo
-  font-size: 15px
-  color: #9ecb33
-  margin-top: 10px
-  margin-bottom: 15px
-  
-  &:hover
-    text-decoration: none
-    color: #9ecb33
-
-  &:focus
-    color: #9ecb33
-    outline: none
-
-.full__fid
-  display: none
-  font-family: gothamPL
-  font-size: 15px
-
-  +media-1152
-    font-size: 13px
-
-  &-visible
-    display: block
-
-.history-right
-  float: right
-
-  +media-1225
-    margin-right: 20px
-
-  +media-1152
-    margin-right: 0px
-
-.history-paginations
-  clear: both
-
-.paginations-list
-  width: 410px
-  margin: 0 auto
-
-.paginations__item
-  float: left
-  color: #fff
-
-  &_sircle
-    background: #d0d0d0
-    border-radius: 50px
-    margin-left: 10px
-    margin-right: 10px
-    padding: 20px 22px
-
-  &_active
-    background: #9ecb32
-    color: #fff
-    
-  &:hover
-    text-decoration: none
-
-
-.history__prev, .history__next
-  z-index: 2
-  position: absolute
-  display: block
-  background: url("../../images/left-arrow-green.png") no-repeat
-  width: 25px
-  height: 25px
-  margin-top: 25px
-  margin-left: 10px
-  margin-right: 10px
-
-  &:hover
-    cursor: pointer
-
-.history__prev
-  bottom: -33px
-  left: 35%
-
-.history__next
-  transform: rotate(-180deg)
-  transform-origin: 50% 20%
-  right: 33%
-  bottom: -33px
-
-
-.history__pagin
-  padding: 10px 15px
-  border-radius: 50px
-  background: #d0d0d0
-  color: #fff
-
-  &:hover
-    color: #fff
-    background: #9ecb32
-
-
-.history-last-slider > ul > li
-  margin-left: 15px
-  margin-right: 15px
-
-.history-last-slider > ul > .slick-active > .history__pagin
-  background: #9ecb32
-
-.history-last-slider > .slick-dots
-  z-index: 1
-
-.victory
-  background: url("../../images/bg-main.png") no-repeat
-  position: relative
-  min-height: 700px
-  padding-left: 0
-  padding-right: 0
-
-  +media-1600
-    -ms-background-position-x: -155px
-    background-position-x: -155px
-
-  +media-1500
-    background-position-x: -240px
-
-  +media-1366
-    background-position-x: -330px
-
-  +media-1024
-    background-position-x: -450px
-
-  +media-860
-    min-height: 640px
-    background-position-x: -570px
-
-  +media-768
-    background-position-x: -685px
-
-
-.victory::before
-  content: ''
-  position: absolute
-  top: -6%
-  left: 0
-  background: url("../../images/line-main.png") no-repeat
-  height: 105px
-  width: 100%
-
-.victory-concurs
-  width: 630px
-  text-align: center
-  padding-top: 125px
-  padding-left: 111px
-
-  +media-860
-    padding-left: 50px
-
-  +media-768
-    width: 525px
-    text-align: left
-
-
-.basil
-  position: absolute
-
-  &__main__one
-    top: 17%
-    right: 31%
-
-    +media-1024
-      right: 20%
-
-    +media-768
-      width: 10vw
-      top: 10%
-      right: 25%
-
-  &__main__second
-    left: 15%
-    top: 41%
-
-    +media-1600
-      left: 12%
-      top: 42%
-
-    +media-860
-      top: 55%
-
-    +media-1280
-      left: 10%
-
-    +media-768
-      width: 9vw
-      left: 5%
-
-  &__main__third
-    right: 35%
-    top: 62%
-
-    +media-1600
-      right: 34%
-      top: 65%
-
-    +media-1024
-      right: 24%
-
-    +media-768
-      width: 9vw
-      right: 23%
-
-.victory__title
-  display: block
-  font-family: drina
-  font-size: 55px
-  color: #444
-
-.victory__text
-  text-align: left
-  display: block
-  padding-bottom: 20px
-  font-family: drina
-  font-size: 36px
-  color: #9ecb32
-
-  +media-768
-    padding-left: 15px
-
-.victory__last__day
-  display: block
-  padding-bottom: 15px
-
-.victory__last__day, .social__news
-  font-family: gothamPBo
-  font-size: 18px
-  color: #919191
-
-  +media-768
-    display: block
-    text-align: center
-
-
-.rolling__line
-  position: absolute
-  bottom: -50px
-  background: url("../../images/line-footer.png") no-repeat
-  width: 100%
-  height: 110px
-  background-size: cover
-
-.logo__count
-  text-align: center
-  line-height: 95px
-  font-size: 28px
-  font-weight: normal
-
-  width: 500px
-  color: #939393
-
-  +media-860
-    width: 550px
-
-  +media-768
-    width: 445px
-
-.logo__count .counter
-  font-size: 50px
-  width: 80px
-  height: 50px
-  display: inline-block
-  padding: 0 30px 0 10px
-  perspective: 200px
-  position: relative
-  top: -7px
-
-
-.seconds, .minutes
-  margin-left: 10px
-
-.logo__count .counter > span
-  display: block
-  position: absolute
-  overflow: hidden
-  padding: 0 5px
-  background: -webkit-gradient(linear, 0 0, 0 100%, from(#FFF), to(#f2f2f2))
-  background: -webkit-linear-gradient(#FFF 0%, #f2f2f2 100%)
-  background: -moz-linear-gradient(#FFF 0%, #f2f2f2 100%)
-  background: -o-linear-gradient(#FFF 0%, #f2f2f2 100%)
-  background: linear-gradient(#FFF 0%, #f2f2f2 100%)
-  height: 45px
-  width: 90px
-  text-align: center
-  backface-visibility: hidden
-  transform-style: preserve-3d
-
-.logo__count .counter span span
-  color: #99df1c
-  line-height: 100px
-
-.logo__count .counter span.decor.top,
-.logo__count .counter span.decor.top_m,
-.logo__count .counter span.decor.top_h
-  box-shadow: 0 24px 43px -3px rgba(0, 0, 0, 0.45)
-
-.logo__count .counter span.decor.bottom,
-.logo__count .counter span.decor.bottom_m,
-.logo__count .counter span.decor.bottom_h
-  box-shadow: 0 2px 0px -1px #d8d8d8, 0 4px 0px -2px #c7c7c7, 0 6px 0px -3px #d8d8d8, 0 8px 0px -4px #c6c6c6, 0 10px 0px -5px #d6d6d6, 0 12px 0px -6px #c9c9c9, 0 14px 0px -7px #d8d8d8, 0 14px 23px -9px rgba(0, 0, 0, 0.8)
-
-.logo__count .counter > span.top,
-.logo__count .counter > span.top_m,
-.logo__count .counter > span.top_h
-  box-shadow: inset 0 -1px 3px rgba(0, 0, 0, 0.2)
-  border-radius: 3px 3px 0 0
-
-.logo__count .counter > span.top span,
-.logo__count .counter > span.top_m span,
-.logo__count .counter > span.top_h span
-  position: relative
-  bottom: 5px
-
-.logo__count .counter > span.bottom,
-.logo__count .counter > span.bottom_m,
-.logo__count .counter > span.bottom_h
-  top: 45px
-  box-shadow: inset 0 -1px 3px rgba(0, 0, 0, 0.2)
-  border-radius: 0 0 3px 3px
-
-.logo__count .counter > span.bottom span,
-.logo__count .counter > span.bottom_m span,
-.logo__count .counter > span.bottom_h span
-  position: relative
-  top: -51px
-
-.logo__count .counter > span.from.bottom,
-.logo__count .counter > span.from_m.bottom_m,
-.logo__count .counter > span.from_h.bottom_h
-  z-index: 1
-  transform-origin: 0% 0%
-  animation: from-flip 1s
-  animation-fill-mode: forwards
-
-.logo__count .counter > span.to.top,
-.logo__count .counter > span.to_m.top_m,
-.logo__count .counter > span.to_h.top_h
-  z-index: 1
-  transform-origin: 100% 100%
-  animation: to-flip 1s
-  animation-fill-mode: forwards
-
-@keyframes from-flip
-  0%
-    transform: rotateX(180deg)
-
-  100%
-    transform: rotateX(0deg)
-
-@keyframes to-flip
-  0%
-    transform: rotateX(0deg)
-
-  100%
-    transform: rotateX(-180deg)
-
-@keyframes fade-out
-  0%
-    opacity: 1
-
-  100%
-    opacity: 0
-
-@keyframes fade-in
-  0%
-    opacity: 0
-
-  100%
-    opacity: 1
-
-.counter .shadow
-  display: block
-  width: 120px
-  height: 45px
-  left: -25px
-  top: -100px !important
-  overflow: hidden
-  z-index: 0
-  opacity: 0
-
-.counter .top .shadow
-  background: linear-gradient(rgba(0,0,0,0) 0%, rgba(0,0,0,0.3) 100%)
-
-.counter .bottom .shadow
-  background: linear-gradient(rgba(0,0,0,0.4) 0%, rgba(0,0,0,0) 100%)
-
-.counter .from.top .shadow
-  animation: fade-out 1s
-.counter .to.bottom .shadow
-  animation: fade-in 1s
-.hide .shadow
-  animation: none !important
-
-@media screen and (-webkit-min-device-pixel-ratio: 0)
-  .logo__count .counter > span span
-    color: rgba(0, 0, 0, 0)
-    background: linear-gradient(#99df1c 0%, #6dbe0a 100%)
-    -webkit-background-clip: text
-    -webkit-text-stroke: 0.03em #85c614
-
-
-/*-------------------------------------------------*/
-
-.social
-  position: relative
-  padding-top: 50px
-
-.small-dotted
-  position: absolute
-  top: 50%
-  left: 0
-  width: 100%
-  height: 75px
-
-  +media-860
-    left: 15%
-    width: 50vw
-
-  +media-768
-    left: 10%
-
-.social-logo
-  display: flex
-  flex-direction: row
-  justify-content: center
-  padding-top: 25px
-
-  &__item
-    z-index: 1
-    margin-left: 20px
-    margin-right: 20px
 
