--- a/resources/assets/stylesheets/sass/helpers/media.sass
+++ b/resources/assets/stylesheets/sass/helpers/media.sass
@@ -31,6 +31,9 @@
 =media-1152
   @media only screen and (max-width: 1152px)
     @content
+=media-1050
+  @media only screen and (max-width: 1050px)
+    @content
 =media-1024
   @media only screen and (max-width: 1024px)
     @content
@@ -55,8 +58,17 @@
 =media-768
   @media only screen and (max-width: 768px)
     @content
+=media-720
+  @media only screen and (max-width: 720px)
+    @content
+=media-685
+  @media only screen and (max-width: 685px)
+    @content
 =media-640
   @media only screen and (max-width: 640px)
+    @content
+=media-576
+  @media only screen and (max-width: 576px)
     @content
 =media-480
   @media only screen and (max-width: 480px)
