--- a/resources/assets/stylesheets/sass/blocks/victory/victory.sass
+++ b/resources/assets/stylesheets/sass/blocks/victory/victory.sass
@@ -53,6 +53,11 @@
     width: 525px
     text-align: left
 
+  +media-576
+    width: 100%
+    text-align: center
+    padding-left: 0
+    padding-right: 0
 
 .basil
   position: absolute
@@ -120,6 +125,9 @@
   font-size: 55px
   color: #444
 
+  +media-576
+    font-size: 9vw
+
 .victory__text
   text-align: left
   display: block
@@ -130,6 +138,11 @@
 
   +media-768
     padding-left: 15px
+
+  +media-576
+    padding-left: 0
+    text-align: center
+    font-size: 6vw
 
 .victory__last__day
   display: block
@@ -144,6 +157,8 @@
     display: block
     text-align: center
 
+  +media-576
+    font-size: 3vw
 
 .rolling__line
   position: absolute
@@ -167,6 +182,10 @@
 
   +media-768
     width: 445px
+
+  +media-576
+    width: 100%
+    padding-right: 25px
 
 .logo__count .counter
   font-size: 50px
