--- a/resources/views/pages/index.njk
+++ b/resources/views/pages/index.njk
@@ -80,6 +80,38 @@
 				        </div>
 			        </div>
 		        </div>
+		        {#
+		        <div class="history-slider slick-slide ">
+			        <div class="history-people">
+				        <div class="history-right">
+					        <div class="history-one">
+						        <img class="history__logo logo-four" src="/assets/images/anna.png" alt="Анна">
+						        <div class="history-feed">
+							        <h5 class="logo-title">Анна Кирилова</h5>
+							        <p class="feed">Это блюдо из мяса и овощей на<br> гриле, которое готовят прямо на<br> глазах. Его могут ещё подавать в<br><span class="full__fid">пите круглой или овальной форм...<br> Это самое вкусное сочетание,<br> особенно, для проголодавшегося<br> туриста, путешествующего по Греции</span></p>
+							        <a href="" class="whatch__full">Читать полностью</a>
+						        </div>
+					        </div>
+					        <div class="history-one">
+						        <img class="history__logo logo-five" src="/assets/images/oleg.png" alt="Олег">
+						        <div class="history-feed">
+							        <h5 class="logo-title">Олег Бондаренко</h5>
+							        <p class="feed">Поговорим о бел пури, вкусном<br> индийском блюде из воздушного риса,<br> жареной вермишели, овощей и соусом <span class="full__fid">из острого тамаринда... Лучше всего <br>попробовать блюдо в Мумбаи.</span></p>
+							        <a href="" class="whatch__full">Читать полностью</a>
+						        </div>
+					        </div>
+					        <div class="history-one">
+						        <img class="history__logo logo-six" src="/assets/images/natasha.png" alt="Наташа">
+						        <div class="history-feed">
+							        <h5 class="logo-title">Наташа Кирова</h5>
+							        <p class="feed">Поговорим о бел пури, вкусном<br> индийском блюде из воздушного риса,<br> жареной вермишели, овощей и соусом <span class="full__fid">из острого тамаринда... Лучше всего <br>попробовать блюдо в Мумбаи.</span></p>
+							        <a href="#" class="whatch__full">Читать полностью</a>
+						        </div>
+					        </div>
+				        </div>
+			        </div>
+		        </div>
+		        #}
 		        <div class="history-slider slick-slide ">
 			        <div class="history-people">
 				        <div class="history-left">
@@ -136,6 +168,38 @@
 				        </div>
 			        </div>
 		        </div>
+		        {#
+		        <div class="history-slider slick-slide ">
+			        <div class="history-people">
+				        <div class="history-right">
+					        <div class="history-one">
+						        <img class="history__logo logo-four" src="/assets/images/anna.png" alt="Анна">
+						        <div class="history-feed">
+							        <h5 class="logo-title">Анна Кирилова</h5>
+							        <p class="feed">Это блюдо из мяса и овощей на<br> гриле, которое готовят прямо на<br> глазах. Его могут ещё подавать в<br><span class="full__fid">пите круглой или овальной форм...<br> Это самое вкусное сочетание,<br> особенно, для проголодавшегося<br> туриста, путешествующего по Греции</span></p>
+							        <a href="" class="whatch__full">Читать полностью</a>
+						        </div>
+					        </div>
+					        <div class="history-one">
+						        <img class="history__logo logo-five" src="/assets/images/oleg.png" alt="Олег">
+						        <div class="history-feed">
+							        <h5 class="logo-title">Олег Бондаренко</h5>
+							        <p class="feed">Поговорим о бел пури, вкусном<br> индийском блюде из воздушного риса,<br> жареной вермишели, овощей и соусом <span class="full__fid">из острого тамаринда... Лучше всего <br>попробовать блюдо в Мумбаи.</span></p>
+							        <a href="" class="whatch__full">Читать полностью</a>
+						        </div>
+					        </div>
+					        <div class="history-one">
+						        <img class="history__logo logo-six" src="/assets/images/natasha.png" alt="Наташа">
+						        <div class="history-feed">
+							        <h5 class="logo-title">Наташа Кирова</h5>
+							        <p class="feed">Поговорим о бел пури, вкусном<br> индийском блюде из воздушного риса,<br> жареной вермишели, овощей и соусом <span class="full__fid">из острого тамаринда... Лучше всего <br>попробовать блюдо в Мумбаи.</span></p>
+							        <a href="" class="whatch__full">Читать полностью</a>
+						        </div>
+					        </div>
+				        </div>
+			        </div>
+		        </div>
+		        #}
 		        <div class="history-slider slick-slide ">
 			        <div class="history-people">
 				        <div class="history-left">
@@ -186,12 +250,43 @@
 						        <div class="history-feed">
 							        <h5 class="logo-title">Наташа Кирова</h5>
 							        <p class="feed">Поговорим о бел пури, вкусном<br> индийском блюде из воздушного риса,<br> жареной вермишели, овощей и соусом <span class="full__fid">из острого тамаринда... Лучше всего <br>попробовать блюдо в Мумбаи.</span></p>
-							        <a href="" class="whatch__full">Читать полностью</a>
+							        <a href="#" class="whatch__full">Читать полностью</a>
 						        </div>
 					        </div>
 				        </div>
 			        </div>
 		        </div>
+		        {#
+		        <div class="history-slider slick-slide ">
+			        <div class="history-people">
+				        <div class="history-right">
+					        <div class="history-one">
+						        <img class="history__logo logo-four" src="/assets/images/anna.png" alt="Анна">
+						        <div class="history-feed">
+							        <h5 class="logo-title">Анна Кирилова</h5>
+							        <p class="feed">Это блюдо из мяса и овощей на<br> гриле, которое готовят прямо на<br> глазах. Его могут ещё подавать в<br><span class="full__fid">пите круглой или овальной форм...<br> Это самое вкусное сочетание,<br> особенно, для проголодавшегося<br> туриста, путешествующего по Греции</span></p>
+							        <a href="" class="whatch__full">Читать полностью</a>
+						        </div>
+					        </div>
+					        <div class="history-one">
+						        <img class="history__logo logo-five" src="/assets/images/oleg.png" alt="Олег">
+						        <div class="history-feed">
+							        <h5 class="logo-title">Олег Бондаренко</h5>
+							        <p class="feed">Поговорим о бел пури, вкусном<br> индийском блюде из воздушного риса,<br> жареной вермишели, овощей и соусом <span class="full__fid">из острого тамаринда... Лучше всего <br>попробовать блюдо в Мумбаи.</span></p>
+							        <a href="" class="whatch__full">Читать полностью</a>
+						        </div>
+					        </div>
+					        <div class="history-one">
+						        <img class="history__logo logo-six" src="/assets/images/natasha.png" alt="Наташа">
+						        <div class="history-feed">
+							        <h5 class="logo-title">Наташа Кирова</h5>
+							        <p class="feed">Поговорим о бел пури, вкусном<br> индийском блюде из воздушного риса,<br> жареной вермишели, овощей и соусом <span class="full__fid">из острого тамаринда... Лучше всего <br>попробовать блюдо в Мумбаи.</span></p>
+							        <a href="#" class="whatch__full">Читать полностью</a>
+						        </div>
+					        </div>
+				        </div>
+			        </div>
+		        </div>#}
             </div>
         </div>
     </div>
