--- a/resources/assets/stylesheets/sass/blocks/history-last/history-last.sass
+++ b/resources/assets/stylesheets/sass/blocks/history-last/history-last.sass
@@ -14,6 +14,7 @@
 
 .history-last > .slick-slider
   width: 795px
+  //width: 355px
 
   +media-1152
     width: 700px
@@ -77,9 +78,19 @@
     padding-top: 55px
     display: flex
     justify-content: space-around
+    
+  +media-576
+    flex-direction: column
+    justify-content: center
 
 .history-left
   float: left
+  
+  +media-576
+    float: none
+    display: flex
+    flex-direction: column
+    justify-content: center
 
 .history-left > .history-one
   +media-1000
@@ -94,9 +105,15 @@
   +media-685
     width: 34vw
 
+  +media-576
+    width: 350px
+
 .history-right > .history-one
   +media-685
     width: 34vw
+
+  +media-576
+    width: 350px
 
 
 .history-one
@@ -107,9 +124,17 @@
   +media-1152
     width: 340px
 
+  +media-576
+    text-align: center
+    margin: 0 auto
+    padding-bottom: 15px
 
 .history__logo
   float: left
+  
+  +media-576
+    float: none
+    margin: 0 auto
 
 .history-feed
   float: left
@@ -117,6 +142,12 @@
 
   +media-1152
     padding-left: 10px
+
+  +media-576
+    float: none
+    padding-left: 0
+    display: flex
+    flex-direction: column
 
 .logo-title
   font-family: gothamPBo
@@ -135,6 +166,11 @@
 
   +media-685
     font-size: 1.9vw
+
+  +media-576
+    margin: 0 auto
+    font-size: 2.5vw
+    text-align: left
 
 .whatch__full
   display: block
@@ -171,6 +207,12 @@
 
   +media-1152
     margin-right: 0px
+    
+  +media-576
+    float: none
+    display: flex
+    flex-direction: column
+    justify-content: center
 
 .history-paginations
   clear: both
