--- a/resources/assets/stylesheets/sass/helpers/media.sass
+++ b/resources/assets/stylesheets/sass/helpers/media.sass
@@ -70,6 +70,9 @@
 =media-576
   @media only screen and (max-width: 576px)
     @content
+=media-500
+  @media only screen and (max-width: 500px)
+    @content
 =media-480
   @media only screen and (max-width: 480px)
     @content
