--- a/resources/assets/stylesheets/sass/blocks/header/header.sass
+++ b/resources/assets/stylesheets/sass/blocks/header/header.sass
@@ -120,12 +120,21 @@
   +media-576
     font-size: 75px
 
+  +media-420
+    font-size: 16vw
+
 .remember-text
   position: relative
 
   +media-685
     width: 340px
     margin: 0 auto
+
+  +media-356
+    width: 310px
+
+  +media-320
+    width: 300px
 
 .remember__sub
   font-family: drina
@@ -154,6 +163,12 @@
   +media-576
     font-size: 35px
 
+  +media-420
+    margin-left: 20px
+
+  +media-380
+    margin-left: 36px
+
 .remember__text
   font-family: gothamPM
   font-size: 18px
@@ -178,6 +193,19 @@
   +media-576
     font-size: 17px
     margin-left: -25px
+
+  +media-420
+    font-size: 14px
+    margin-left: -10px
+
+  +media-380
+    margin-left: 12px
+
+  +media-356
+    font-size: 4vw
+
+  +media-320
+    margin-bottom: 0
 
 .remember__text_new
   display: none
@@ -273,6 +301,12 @@
   +media-576
     font-size: 3.5vw
 
+  +media-380
+    font-size: 4.3vw
+
+  +media-320
+    font-size: 5vw
+
 .remember__step__text
   font-family: gothamPB
   display: block
@@ -291,6 +325,12 @@
 
   +media-576
     font-size: 3vw
+
+  +media-380
+    font-size: 4vw
+
+  +media-320
+    font-size: 4.8vw
 
 .step-third
   margin-left: 40px
@@ -442,6 +482,9 @@
 
     +media-576
       top:  65%
+
+    +media-356
+      right: 10%
 
 
 
