--- a/resources/assets/stylesheets/sass/blocks/history-last/history-last.sass
+++ b/resources/assets/stylesheets/sass/blocks/history-last/history-last.sass
@@ -108,6 +108,9 @@
   +media-576
     width: 350px
 
+  +media-356
+    width: 310px
+
 .history-right > .history-one
   +media-685
     width: 34vw
@@ -115,6 +118,8 @@
   +media-576
     width: 350px
 
+  +media-356
+    width: 310px
 
 .history-one
   width: 385px
@@ -171,6 +176,12 @@
     margin: 0 auto
     font-size: 2.5vw
     text-align: left
+
+  +media-500
+    font-size: 3vw
+
+  +media-380
+    font-size: 4vw
 
 .whatch__full
   display: block
@@ -264,6 +275,18 @@
   +media-576
     left: 29%
 
+  +media-500
+    left: 24%
+
+  +media-420
+    left: 22%
+
+  +media-380
+    left: 18%
+
+  +media-356
+    left: 15%
+
 .history__next
   transform: rotate(-180deg)
   transform-origin: 50% 20%
@@ -275,6 +298,18 @@
 
   +media-576
     right: 25%
+
+  +media-500
+    right: 20%
+
+  +media-420
+    right: 18%
+
+  +media-380
+    right: 14%
+
+  +media-356
+    right: 10%
 
 .history__pagin
   padding: 10px 15px
