--- a/resources/assets/stylesheets/sass/blocks/simple-btn/simpe-btn.sass
+++ b/resources/assets/stylesheets/sass/blocks/simple-btn/simpe-btn.sass
@@ -40,3 +40,13 @@
 
   +media-576
     width:  38vw
+
+  +media-500
+    width: 43vw
+    font-size: 15px
+
+  +media-380
+    width: 55vw
+
+  +media-356
+    font-size: 14px
