--- a/resources/assets/stylesheets/sass/blocks/social/social.sass
+++ b/resources/assets/stylesheets/sass/blocks/social/social.sass
@@ -30,6 +30,10 @@
     width: 90%
     left: 5%
 
+  +media-380
+    width: 100%
+    left: 0
+
 .social-logo
   display: flex
   flex-direction: row
@@ -44,3 +48,6 @@
 .social__img
   +media-576
     width: 85px
+
+  +media-356
+    width: 70px
