--- a/resources/assets/stylesheets/sass/blocks/victory/victory.sass
+++ b/resources/assets/stylesheets/sass/blocks/victory/victory.sass
@@ -128,6 +128,9 @@
   +media-576
     font-size: 9vw
 
+  +media-420
+    font-size: 10vw
+
 .victory__text
   text-align: left
   display: block
@@ -144,6 +147,9 @@
     text-align: center
     font-size: 6vw
 
+  +media-420
+    font-size: 7vw
+
 .victory__last__day
   display: block
   padding-bottom: 15px
@@ -159,6 +165,9 @@
 
   +media-576
     font-size: 3vw
+
+  +media-420
+    font-size: 4vw
 
 .rolling__line
   position: absolute
@@ -217,6 +226,10 @@
   backface-visibility: hidden
   transform-style: preserve-3d
 
+  +media-320
+    height: 40px
+    width: 80px
+
 .logo__count .counter span span
   color: #99df1c
   line-height: 100px
@@ -243,12 +256,18 @@
   position: relative
   bottom: 5px
 
+  +media-320
+    bottom: 8px
+
 .logo__count .counter > span.bottom,
 .logo__count .counter > span.bottom_m,
 .logo__count .counter > span.bottom_h
   top: 45px
   box-shadow: inset 0 -1px 3px rgba(0, 0, 0, 0.2)
   border-radius: 0 0 3px 3px
+
+  +media-320
+    top: 40px
 
 .logo__count .counter > span.bottom span,
 .logo__count .counter > span.bottom_m span,
