--- a/resources/assets/stylesheets/sass/blocks/wrapper/index.sass
+++ b/resources/assets/stylesheets/sass/blocks/wrapper/index.sass
@@ -45,6 +45,13 @@ a:hover, a:focus
   +media-640
     width: 68vw
 
+  +media-500
+    width: 100%
+
+  +media-420
+    background-size: contain
+
+
 .create__pepper
   position: absolute
   top: 10%
@@ -73,6 +80,10 @@ a:hover, a:focus
     left: 45%
     bottom: 0
     width: 65px
+
+  +media-356
+    top: 6%
+    width: 50px
 
 .history-content
   border: 5px dotted #d6d6d6
@@ -103,6 +114,21 @@ a:hover, a:focus
   +media-768
     padding-bottom: 50px
 
+  +media-500
+    padding-top: 100px
+    padding-bottom: 100px
+
+  +media-420
+    padding-top: 50px
+    padding-bottom: 85px
+
+  +media-380
+    padding-top: 25px
+    padding-bottom: 55px
+
+  +media-356
+    padding-bottom: 35px
+
 .history__title
   font-family: drina
   font-size: 50px
@@ -127,6 +153,14 @@ a:hover, a:focus
 
   +media-685
     font-size: 7vw
+
+  +media-500
+    font-size: 8vw
+    padding-top: 25px
+
+  +media-356
+    font-size: 9vw
+    padding-top: 5px
 
 .history__text_white
   color: #fff
@@ -154,6 +188,14 @@ a:hover, a:focus
   +media-768
     font-size: 15px
 
+  +media-500
+    font-size: 15px
+
+  +media-356
+    font-size: 13px
+
+  +media-320
+    font-size: 12px
 
 .history__send
   color: #a4ce3e
