--- a/resources/assets/stylesheets/sass/helpers/media.sass
+++ b/resources/assets/stylesheets/sass/helpers/media.sass
@@ -76,6 +76,15 @@
 =media-480
   @media only screen and (max-width: 480px)
     @content
+=media-420
+  @media only screen and (max-width: 420px)
+    @content
+=media-380
+  @media  only screen and (max-width: 380px)
+    @content
+=media-356
+  @media  only screen and (max-width: 356px)
+    @content
 =media-320
   @media only screen and (max-width: 320px)
     @content
