--- a/resources/assets/stylesheets/sass/blocks/nav-header-mobile/nav-header-mobile.sass
+++ b/resources/assets/stylesheets/sass/blocks/nav-header-mobile/nav-header-mobile.sass
@@ -24,6 +24,9 @@
   +media-640
     display: block
 
+  +media-500
+    height: 50vh
+
 .btn-gamb
   position: absolute
   top: 5%
@@ -33,8 +36,19 @@
   +media-640
     display: block
 
+  +media-420
+    top: 4%
+
   &-destroy
     display: none
+
+.gamb
+  width: 50px
+  height: 50px
+
+  +media-420
+    width: 40px
+    height: 40px
 
 .btn-cencel
   position: absolute
@@ -62,6 +76,9 @@
 
   +media-640
     display: block
+
+  +media-420
+    top: 1.5%
 
 .mobile-menu-content
   display: none
