--- a/resources/assets/stylesheets/sass/blocks/header/header.sass
+++ b/resources/assets/stylesheets/sass/blocks/header/header.sass
@@ -10,11 +10,14 @@
   +media-1366
     background-position-x: -135px
 
+  +media-1280
+    background-position-x: -170px
+
   +media-1152
     background-position-x: -225px
 
   +media-1024
-    background-position-x: -280px
+    background-position-x: -300px
 
   +media-992
     background-position-x: -335px
@@ -23,7 +26,7 @@
     background-position-x: -325px
 
   +media-860
-    background-position-x: -365px
+    background-position-x: -385px
 
   +media-768
     background-position-x: -395px
@@ -90,6 +93,8 @@
 .remember__title
   font-family: drina
   font-size: 120px
+
+  //+animate-eff
 
   +media-1600
     font-size: 95px
