--- a/resources/assets/stylesheets/sass/blocks/victory/victory.sass
+++ b/resources/assets/stylesheets/sass/blocks/victory/victory.sass
@@ -125,6 +125,9 @@
   font-size: 55px
   color: #444
 
+  //&-animate
+    +animate-eff
+
   +media-576
     font-size: 9vw
 
@@ -168,6 +171,9 @@
 
   +media-420
     font-size: 4vw
+
+  +media-320
+    font-size: 4.5vw
 
 .rolling__line
   position: absolute
