--- a/resources/views/layouts/layout.njk
+++ b/resources/views/layouts/layout.njk
@@ -13,6 +13,7 @@
     <link rel="shortcut icon" href="${require('/assets/images/favicon/favicon.ico')}" type="image/x-icon">
     <link rel="apple-touch-icon" href="${require('/assets/images/favicon/apple-touch-icon.png')}" type="image/png">
 
+
     <link rel="stylesheet" href="css/app.css?{{ hash }}">
 </head>
 <body>
@@ -22,5 +23,7 @@
 </main>
 {% include "shared/_footer.njk" %}
 <script src="js/app.js?{{ hash }}"></script>
+
+{#<script src="bower_components/jquery/src/jquery.viwportchecker.min.js"></script>#}
 </body>
 </html>
