--- a/resources/assets/stylesheets/sass/helpers/media.sass
+++ b/resources/assets/stylesheets/sass/helpers/media.sass
@@ -25,6 +25,9 @@
 =media-1225
   @media only screen and (max-width: 1225px)
     @content
+=media-1211
+  @media only screen and (max-width: 1211px)
+    @content
 =media-1200
   @media only screen and (max-width: 1200px)
     @content
