--- a/resources/views/pages/index.njk
+++ b/resources/views/pages/index.njk
@@ -301,7 +301,7 @@
     <div class="container">
         <div class="victory-concurs">
 
-            <span class="wow fadeInLeft victory__title">Победитель конкурса</span>
+            <span class="wow fadeInLeft victory__title" data-wow-delay="0s">Победитель конкурса</span>
             <span class="victory__text">Будет объявлен 20 ноября 2017 года</span>
 
             <span class="victory__last__day">До  конца  конкурса  осталось:</span>
