--- a/resources/views/shared/_header.njk
+++ b/resources/views/shared/_header.njk
@@ -6,9 +6,9 @@
 	    {% include "shared/_nav-header-mobile.njk" %}
         <div class="remember">
             <div class="remember-right">
-                <h1 class="wow fadeInLeft remember__title ">Вспомни лучшее</h1>
+                <h1 class="wow fadeInLeft remember__title " data-wow-delay="0s">Вспомни лучшее</h1>
                 <div class="remember-text">
-                    <span class="remember__sub">вместе с Piu Del Cibo</span>
+                    <span class="remember__sub" >вместе с Piu Del Cibo</span>
                     <p class="remember__text remember__text_hide">Расскажи историю о лучшей еде в твоей жизни и выиграй<br>
 блюдо не из меню от нашего шеф-повара, приготовленное<br></p>
                     <p class="remember__text remember__text_new">Расскажи историю о лучшей еде в твоей<br> жизни и выиграй
