--- a/resources/views/shared/_footer.njk
+++ b/resources/views/shared/_footer.njk
@@ -3,7 +3,7 @@
         <div class="emotions">
 	        <img class="basil basil-first" src="/assets/images/basil-footer_second.png">
 	        <img class="basil basil-second" src="/assets/images/basil-footer_first.png">
-            <h1 class="wow fadeInLeft emotions__title">Какие эмоции мы хотим вызвать у наших гостей?</h1>
+            <h1 data-aos="fade-left" class="emotions__title">Какие эмоции мы хотим вызвать у наших гостей?</h1>
             <div class="emotions-slider">
                 <div class="footer-slider slider single-item one-time">
 		          {#<button type="button" class="slick-prev"></button>#}
