--- a/resources/views/pages/index.njk
+++ b/resources/views/pages/index.njk
@@ -22,7 +22,7 @@
         <div class="history-last">
             <img class="bacon" src="/assets/images/bacon.png">
             <img class="basilick" src="/assets/images/basil-small.png">
-            <h2 class="wow fadeInLeft history-last__titile ">Последние истории</h2>
+            <h2 data-aos="fade-left" class="history-last__titile" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="600">Последние истории</h2>
 	        <div class="history-last-slider slider ">
 		        <div class="history-slider slick-slide ">
 			        <div class="history-people">
@@ -301,7 +301,7 @@
     <div class="container">
         <div class="victory-concurs">
 
-            <span class="wow fadeInLeft victory__title">Победитель конкурса</span>
+            <span data-aos="fade-left" class="victory__title">Победитель конкурса</span>
             <span class="victory__text">Будет объявлен 20 ноября 2017 года</span>
 
             <span class="victory__last__day">До  конца  конкурса  осталось:</span>
